[package]
name = "one_collect"
description = "Cross-platform library for capturing machine-level traces."
version = "0.0.0-dev"
edition = "2021"
license = "MIT"
repository = "https://github.com/microsoft/one-collect"

[features]
default = ["scripting"]
scripting = []

[dependencies]
anyhow = "1.0.75"
twox-hash = "1.6.3"
protobuf = "3.7.*"
flate2 = "1.0.31"
ruwind = { path = "../ruwind" }
chrono = "0.4.39"
rhai = "1.21.0"
sha1 = "0.10.6"
tracing = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55.0"

# windows-sys is intentionally NOT gated to `cfg(target_os = "windows")`.
# The `etw` module is gated by `cfg(any(doc, target_os = "windows"))` in
# lib.rs, so rustdoc (which sets `cfg(doc)`) compiles it on every target
# including Linux; the `pub use windows_sys::…` re-exports in `etw/abi.rs`
# need the crate to be resolvable there too. On non-Windows targets
# windows-sys compiles to a no-op at lib build time (type definitions only;
# link directives don't fire until an executable is built), and because
# nothing in the Linux code paths references windows-sys symbols the
# linker drops it entirely — no impact on the Linux binary size.
#
# Version tracks what winreg resolves to (currently 0.59); bump in lockstep.
#
# Cargo unifies features additively across the dep graph, so the actual
# windows-sys compilation also includes the features winreg enables (e.g.
# Win32_System_Registry). We deliberately list only the features `etw/`
# uses directly, so this manifest documents our own surface rather than
# transitively inherited features.
[dependencies.windows-sys]
version = "0.59"
features = ["Win32_Foundation", "Win32_System_Diagnostics_Etw"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.153"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "event"
harness = false

[[bench]]
name = "intern"
harness = false

[[bench]]
name = "export"
harness = false

[[bench]]
name = "kallsyms"
harness = false

[lints.clippy]
absurd_extreme_comparisons = "deny"
almost_swapped = "deny"
approx_constant = "deny"
async_yields_async = "deny"
bad_bit_mask = "deny"
cast_slice_different_sizes = "deny"
deprecated_semver = "deny"
derive_ord_xor_partial_ord = "deny"
derived_hash_with_manual_eq = "deny"
eager_transmute = "deny"
enum_clike_unportable_variant = "deny"
eq_op = "deny"
erasing_op = "deny"
unpredictable_function_pointer_comparisons = "deny"
if_let_mutex = "deny"
ifs_same_cond = "deny"
impl_hash_borrow_with_str_and_bytes = "deny"
impossible_comparisons = "deny"
ineffective_bit_mask = "deny"
inherent_to_string_shadow_display = "deny"
inline_fn_without_body = "deny"
invalid_null_arguments = "deny"
invisible_characters = "deny"
iter_next_loop = "deny"
iter_skip_zero = "deny"
iterator_step_by_zero = "deny"
let_underscore_lock = "deny"
lint_groups_priority = "deny"
match_str_case_mismatch = "deny"
mem_replace_with_uninit = "deny"
min_max = "deny"
mistyped_literal_suffixes = "deny"
modulo_one = "deny"
mut_from_ref = "deny"
never_loop = "deny"
non_octal_unix_permissions = "deny"
nonsensical_open_options = "deny"
not_unsafe_ptr_arg_deref = "deny"
option_env_unwrap = "deny"
out_of_bounds_indexing = "deny"
overly_complex_bool_expr = "deny"
panicking_unwrap = "deny"
possible_missing_comma = "deny"
read_line_without_trim = "deny"
recursive_format_impl = "deny"
redundant_comparisons = "deny"
redundant_locals = "deny"
reversed_empty_ranges = "deny"
self_assignment = "deny"
serde_api_misuse = "deny"
size_of_in_element_count = "deny"
suspicious_splitn = "deny"
transmute_null_to_fn = "deny"
transmuting_null = "deny"
uninit_assumed_init = "deny"
uninit_vec = "deny"
unit_cmp = "deny"
unit_hash = "deny"
unit_return_expecting_ord = "deny"
unsound_collection_transmute = "deny"
unused_io_amount = "deny"
useless_attribute = "deny"
vec_resize_to_zero = "deny"
while_immutable_condition = "deny"
wrong_transmute = "deny"
zst_offset = "deny"
